/api/lookup => /api/geoip
